--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 certifi==2024.6.2
 charset-normalizer==3.3.2
 Django==4.2.13
+django-ckeditor-5==0.2.13
+django-js-asset==2.2.0
 django-phonenumber-field==7.3.0
 django-redis==5.4.0
 djangorestframework==3.15.1
@@ -16,6 +18,7 @@ pillow==10.3.0
 psycopg2==2.9.9
 pycodestyle==2.11.1
 pyflakes==3.2.0
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.4
